# TTrpg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: GameMaster.hpp  Socket.h  Socket.hpp  Socket.hxx  cell.hpp  grid.hpp  renderer.h  server.hpp  server.hxx  winsock_errors.hpp  winsock_except.hpp
include/GM/: GameManager.hpp  GameManagerLocal.hpp  GameManagerServer.hpp  GameManagerSingleton.hpp
include/utils/: singleton.hpp
src/: GameManagerLocal.cpp  GameManagerServer.cpp  GameManagerSingleton.cpp  Socket.cpp  grid.cpp  main.cpp  server.cpp  winsock_errors.cpp  winsock_except.cpp
tests/: catch.cpp
